--- a/templates/template-application-ui-angular-mongodb/src/main/resources/template-application-ui-angular-mongodb/ui/perspectives/views/report/pie/index.html.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/template-application-ui-angular-mongodb/ui/perspectives/views/report/pie/index.html.template
@@ -27,9 +27,9 @@
 #end
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular-animate.min.js"></script>
 	<script type="text/javascript" src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
-	<script type="text/javascript" src="../../../../../../../../services/v4/web/resources/jqplot/1.0.8/jquery.jqplot.min.js"></script>
-	<script type="text/javascript" src="../../../../../../../../services/v4/web/resources/jqplot/1.0.8/jqplot.pieRenderer.min.js"></script>
-	<script type="text/javascript" src="../../../../../../../../services/v4/web/resources/jqplot/1.0.8/jqplot.donutRenderer.min.js"></script>
+	<script type="text/javascript" src="/webjars/jqplot/1.0.8r1250/jquery.jqplot.min.js"></script>
+	<script type="text/javascript" src="/webjars/jqplot/1.0.8r1250/plugins/jqplot.pieRenderer.min.js"></script>
+	<script type="text/javascript" src="/webjars/jqplot/1.0.8r1250/plugins/jqplot.donutRenderer.min.js"></script>
 
 	<script type="text/javascript" src="controller.js"></script>
 
