--- a/templates/template-application-ui-angular-mongodb/src/main/resources/template-application-ui-angular-mongodb/ui/perspectives/index.html.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/template-application-ui-angular-mongodb/ui/perspectives/index.html.template
@@ -23,7 +23,7 @@
     <link type="text/css" rel="stylesheet" href="../../../../../../services/v4/core/theme/bootstrap.min.css">
 
     <!-- GoldenLayout with Theme Support -->
-    <link type="text/css" rel="stylesheet" href="/webjars/golden-layout/1.5.9/src/css/goldenlayout-base.css" />
+    <link type="text/css" rel="stylesheet" href="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
     <link type="text/css" rel="stylesheet" href="../../../../../../services/v4/core/theme/goldenlayout-theme.css" />
 	
     <!-- Custom IDE Styles -->
@@ -56,7 +56,7 @@
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular-resource.min.js"></script>
 
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/webjars/golden-layout/1.5.9/dist/goldenlayout.min.js"></script>
+	<script type="text/javascript" src="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
 #if($includeLaunchpad)
 	<script type="text/javascript" src="../../../../../../services/v4/web/${projectName}/ui/resources/js/message-hub.js"></script>	
