--- a/templates/template-extension-perspective/src/main/resources/template-extension-perspective/index.html.template
+++ b/templates/template-extension-perspective/src/main/resources/template-extension-perspective/index.html.template
@@ -26,7 +26,7 @@
 	<link type="text/css" rel="stylesheet" href="/services/v4/core/theme/bootstrap.min.css">
 
 	<!-- GoldenLayout with Theme Support -->
-	<link type="text/css" rel="stylesheet" href="/webjars/golden-layout/1.5.9/src/css/goldenlayout-base.css" />
+	<link type="text/css" rel="stylesheet" href="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
 	<link type="text/css" rel="stylesheet" href="/services/v4/core/theme/goldenlayout-theme.css" />
 	
 	<!-- Custom IDE Styles -->
@@ -54,7 +54,7 @@
 	<script type="text/javascript" src="/webjars/angularjs/1.4.7/angular-resource.min.js"></script>
 
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/webjars/golden-layout/1.5.9/dist/goldenlayout.min.js"></script>
+	<script type="text/javascript" src="/services/v4/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
 	<script type="text/javascript" src="../ide/ui/message-hub.js"></script>	
 	<script type="text/javascript" src="../ide/ui/ui-layout.js"></script>
