--- a/modules/bpm/ide-service-bpm/pom.xml
+++ b/modules/bpm/ide-service-bpm/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-ide-service-parent</artifactId>
+		<artifactId>dirigible-bpm-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
