--- a/templates/template-database-view/pom.xml
+++ b/templates/template-database-view/pom.xml
@@ -20,13 +20,14 @@
 	</scm>
 	
 	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+
 		<content.repository.name>template-database-view</content.repository.name>
 		<content.project.name>template-database-view</content.project.name>
 
 		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
 		<content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
 		<content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}</content.scm.developerConnection>
-
 	</properties>
 
 </project>
