--- a/modules/core/core-indexing/pom.xml
+++ b/modules/core/core-indexing/pom.xml
@@ -54,4 +54,8 @@
     	</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
