--- a/modules/core/core-messaging/pom.xml
+++ b/modules/core/core-messaging/pom.xml
@@ -130,4 +130,8 @@
         </dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
