--- a/modules/core/core-problems/pom.xml
+++ b/modules/core/core-problems/pom.xml
@@ -57,4 +57,8 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
+
 </project>
