--- a/modules/core/core-scheduler/pom.xml
+++ b/modules/core/core-scheduler/pom.xml
@@ -114,4 +114,8 @@
     	</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
