--- a/modules/core/core-security/pom.xml
+++ b/modules/core/core-security/pom.xml
@@ -77,4 +77,8 @@
         </dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
