--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -29,4 +29,8 @@
 		<module>core-websockets</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
