--- a/modules/repository/pom.xml
+++ b/modules/repository/pom.xml
@@ -25,4 +25,8 @@
 		<module>repository-zip</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
