--- a/modules/repository/repository-all/pom.xml
+++ b/modules/repository/repository-all/pom.xml
@@ -71,4 +71,8 @@
          -->
     </dependencies>
 
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
+
 </project>
