--- a/modules/repository/repository-database/pom.xml
+++ b/modules/repository/repository-database/pom.xml
@@ -104,4 +104,8 @@
 		</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
