--- a/modules/repository/repository-local/pom.xml
+++ b/modules/repository/repository-local/pom.xml
@@ -76,4 +76,8 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
+
 </project>
