--- a/modules/services/pom.xml
+++ b/modules/services/pom.xml
@@ -27,4 +27,8 @@
 		<module>service-websockets</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
