--- a/modules/services/service-security/pom.xml
+++ b/modules/services/service-security/pom.xml
@@ -72,4 +72,8 @@
     	</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
