--- a/modules/templating/pom.xml
+++ b/modules/templating/pom.xml
@@ -23,4 +23,8 @@
 		<module>ide-templating</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
