--- a/modules/templating/templating-javascript/pom.xml
+++ b/modules/templating/templating-javascript/pom.xml
@@ -66,7 +66,10 @@
 			<version>6.0.0-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
-
     </dependencies>
-    
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
