--- a/modules/templating/templating-velocity/pom.xml
+++ b/modules/templating/templating-velocity/pom.xml
@@ -45,4 +45,8 @@
 		</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
