--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -22,4 +22,4 @@ jobs:
       run: mvn clean install -Dmaven.javadoc.skip=false
     - name: Maven Build if not Windows
       if: ${{ matrix.os != 'windows-latest' }}
-      run: mvn clean install  -Dmaven.javadoc.skip=false -Drabbitmq-test -Dredis-test -Delastic-test -Detcd-test
+      run: mvn clean install -Drabbitmq-test -Dredis-test -Delastic-test -Detcd-test
