--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/master-manage/master/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/master-manage/master/controller.js.template
@@ -99,7 +99,7 @@ angular.module('page')
 	function ${property.name.toLowerCase()}OptionsLoad() {
 		${dollar}http.get(${property.name.toLowerCase()}OptionsApi)
 		.then(function(data) {
-			$scope.${property.name.toLowerCase()}Options = data;
+			$scope.${property.name.toLowerCase()}Options = data.data;
 		});
 	}
 	${property.name.toLowerCase()}OptionsLoad();
@@ -131,11 +131,11 @@ angular.module('page')
 		$scope.dataPage = pageNumber;
 		${dollar}http.get(api + '/count')
 		.then(function(data) {
-			$scope.dataCount = data;
+			$scope.dataCount = data.data;
 			$scope.dataPages = Math.ceil($scope.dataCount / $scope.dataLimit);
 			${dollar}http.get(api + '?${dollar}offset=' + ((pageNumber - 1) * ${dollar}scope.dataLimit) + '&${dollar}limit=' + ${dollar}scope.dataLimit)
 			.then(function(data) {
-				$scope.data = data;
+				$scope.data = data.data;
 			});
 		});
 	};
@@ -172,7 +172,7 @@ angular.module('page')
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
 			}, function(data) {
-				alert(JSON.stringify(data));
+				alert(JSON.stringify(data.data));
 			});
 		}
 	};
@@ -189,7 +189,7 @@ angular.module('page')
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
 			}, function(data) {
-				alert(JSON.stringify(data));
+				alert(JSON.stringify(data.data));
 			})
 		}
 	};
@@ -205,7 +205,7 @@ angular.module('page')
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
 		}, function(data) {
-			alert(JSON.stringify(data));
+			alert(JSON.stringify(data.data));
 		});
 	};
 
