--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/pie/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/pie/controller.js.template
@@ -50,8 +50,8 @@ angular.module('page')
 		$http.get(api)
 		.then(function(data) {
 			var chartData = [];
-			for (var i = 0; i < data.length; i ++) {
-				chartData.push([#foreach ($property in $properties)data[i].${property.name}#if($foreach.hasNext), #end#end]);
+			for (var i = 0; i < data.data.length; i ++) {
+				chartData.push([#foreach ($property in $properties)data.data[i].${property.name}#if($foreach.hasNext), #end#end]);
 			}
 			$.jqplot ('chart', [chartData], {
 				seriesDefaults: {
