--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/resources/js/ui-core-ng-modules.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/resources/js/ui-core-ng-modules.js.template
@@ -91,7 +91,7 @@ angular.module('ideUiCore', ['ngResource'])
 				url: relativePath + 'services/v4/js/ide-core/services/user-name.js',
 				method: 'GET'
 			}).then(function(data){
-				user.name = data;
+				user.name = data.data;
 			});
 			return user;
 		}
