--- a/ide/ui/ide-database-menu/pom.xml
+++ b/ide/ui/ide-database-menu/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>dirigible-ide-ui-parent</artifactId>
         <groupId>org.eclipse.dirigible</groupId>
         <version>7.0.0-SNAPSHOT</version>
-        <relativePath>../ide-group-all/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
