--- a/ide/ui/ide-websockets-menu/pom.xml
+++ b/ide/ui/ide-websockets-menu/pom.xml
@@ -5,6 +5,7 @@
         <artifactId>dirigible-ide-ui-parent</artifactId>
         <groupId>org.eclipse.dirigible</groupId>
         <version>7.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
